# dana-aether-kit

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  aether.py  implementation_plan.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
aether/: __init__.py  cli.py  utils.py
aether/commands/: __init__.py  agent.py  config.py  coordinate.py  init.py  lock.py  run.py
aether/utils/: __init__.py  lockfile.py  tmux.py
examples/crypto_signal_pipeline/: project.dana
examples/crypto_signal_pipeline/agents/: risk_assessor.na  sentiment.na  signal_generator.na
examples/research_agent/: project.dana
examples/research_agent/agents/: researcher.na
scripts/: launch_tmux.sh  setup_venv.sh
templates/: .env.example  project.dana
templates/.aether/: roles.json
templates/agents/: btc_sentiment.na  example.na
templates/knowledge/: crypto_basics.md
tests/: test_cli.py
